--- a/demo/actZnkExerciseDemo/index.html
+++ b/demo/actZnkExerciseDemo/index.html
@@ -65,6 +65,7 @@
 <script src="Chart.js/Chart.js"></script>
 <script src="angular-chart.js/dist/angular-chart.js"></script>
 <script src="v-accordion/dist/v-accordion.js"></script>
+<script src="satellizer/satellizer.js"></script>
 <script src="infra-web-app/dist/main.js"></script>
 <script src="angularfire/dist/angularfire.js"></script>
 <!-- endBower -->
